--- a/.github/workflows/create-release-template.yml
+++ b/.github/workflows/create-release-template.yml
@@ -9,20 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       last_version: ${{ steps.get_last_version.outputs.last_version }}
-      is_release_candidate: ${{ steps.check_if_is_rc.outputs.is_release_candidate }}
+      is_release_candidate: ${{ steps.get_last_version.outputs.is_release_candidate }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Get last version
         id: get_last_version
-        run: bash scripts/latest-version-obtaining.sh
-
-      - name: Check if is release candidate
-        id: check_if_is_rc
-        run: bash scripts/release-candidate-checking.sh
-        env:
-          VERSION: ${{ steps.get_last_version.outputs.last_version }}
+        uses: davidsonbrsilva/versioning-workflow/actions/latest-version-obtaining@v1
 
   generate_next_release_version:
     name: Generate next release version
@@ -36,10 +30,10 @@ jobs:
 
       - name: Generate next release version
         id: generate_next_release
-        run: bash scripts/release-versioning.sh
-        env:
-          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-          LAST_VERSION: ${{ needs.get_last_version.outputs.last_version }}
+        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@v1
+        with:
+          commit_message: ${{ github.event.head_commit.message }}
+          last_version: ${{ needs.get_last_version.outputs.last_version }}
     if: ${{ !needs.get_last_version.outputs.is_release_candidate }}
 
   remove_release_candidate_suffix:
@@ -83,11 +77,12 @@ jobs:
 
       - name: Create release
         id: create_release
-        run: bash scripts/release-creation.sh
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VERSION: ${{ needs.generate_next_release_version.outputs.version || needs.remove_release_candidate_suffix.outputs.version }}
-          TARGET_COMMIT: ${{ github.event.head_commit.id }}
+        uses: davidsonbrsilva/versioning-workflow/actions/release-creation@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          version: ${{ needs.generate_next_release_version.outputs.version || needs.remove_release_candidate_suffix.outputs.version }}
+          target_commit: ${{ github.event.head_commit.id }}
+          pre_release: true
     if: |
       always() &&
       ((needs.generate_next_release_version.result == 'success' && needs.remove_release_candidate_suffix.result == 'skipped') ||
