--- a/actions/release-versioning/action.yml
+++ b/actions/release-versioning/action.yml
@@ -29,6 +29,7 @@ runs:
 
     - name: Generate next release version
       id: generate_next_release
+      shell: bash
       run: bash scripts/release-versioning.sh
       env:
         COMMIT_MESSAGE: ${{ inputs.commit_message }}
