--- a/actions/release-creation/action.yml
+++ b/actions/release-creation/action.yml
@@ -23,7 +23,7 @@ runs:
     - name: Create release
       id: create_release
       shell: bash
-      run: bash scripts/release-creation.sh
+      run: release-creation.sh
       env:
         GITHUB_TOKEN: ${{ inputs.token }}
         VERSION: ${{ inputs.version }}
