--- a/actions/release-versioning/action.yml
+++ b/actions/release-versioning/action.yml
@@ -27,6 +27,12 @@ runs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Set GitHub path
+      run: echo "$GITHUB_ACTION_PATH" >> $GITHUB_PATH
+      shell: bash
+      env:
+        GITHUB_ACTION_PATH: ${{ github.action_path }}
+
     - name: Generate next release version
       id: generate_next_release
       shell: bash
