--- a/.github/workflows/upsert-major-version-template.yml
+++ b/.github/workflows/upsert-major-version-template.yml
@@ -27,7 +27,7 @@ jobs:
             git push origin :refs/tags/$tag_name
 
             # Target most recent commit
-            # git tag -fa $tag_name
+            # git tag $tag_name
 
             # Push new reference
             git push origin --tags
