fix: fixed workflow refs

--- a/.github/workflows/create-pre-release.yml
+++ b/.github/workflows/create-pre-release.yml
@@ -8,6 +8,6 @@ on:
 jobs:
   create_release_candidate:
     name: Create release candidate
-    uses: davidsonbrsilva/versioning-workflow/.github/workflows/create-pre-release-template.yml@main
+    uses: davidsonbrsilva/versioning-workflow/.github/workflows/create-pre-release-template.yml@v0
     permissions:
       contents: write
