--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -32,17 +32,11 @@ jobs:
     steps:
       - name: Check if new commit is major change
         id: check_major_change
-        env:
-          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         run: |
-          if [[ -z "$COMMIT_MESSAGE" ]]; then
-            echo "'COMMIT_MESSAGE' is required."
-            exit 1
-          fi
-
+          $commit_message=${{ github.event.head_commit.message }}
           major_change_regex="(^FIRST RELEASE:.*$)|(^BREAKING CHANGE:.*$)|(^[^\s]+!:.*$)"
 
-          if [[ "$COMMIT_MESSAGE" =~ $breaking_change_regex ]]; then
+          if [[ "$commit_message" =~ $breaking_change_regex ]]; then
             echo "A major change was identified."
             echo "is_major_change=true >> $GITHUB_OUTPUT
             exit 0
