--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -30,10 +30,13 @@ jobs:
       is_major_change: ${{ steps.check_major_change.outputs.is_major_change }}
     needs: get_last_version
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Check if new commit is major change
         id: check_major_change
         run: |
-          $commit_message=${{ github.event.head_commit.message }}
+          commit_message=${{ github.event.head_commit.message }}
           major_change_regex="(^FIRST RELEASE:.*$)|(^BREAKING CHANGE:.*$)|(^[^\s]+!:.*$)"
 
           if [[ "$commit_message" =~ $breaking_change_regex ]]; then
