--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -30,18 +30,24 @@ jobs:
       is_major_change: ${{ steps.check_major_change.outputs.is_major_change }}
     needs: get_last_version
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
+      - name: Get commit message
+        id: get_commit_message
+        run: |
+          commit_sha=${{ github.event.pull_request.head.sha }}
+          commit_message=$(curl -sSL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/commits/$commit_sha" \
+            | jq -r '.commit.message')
+          echo "commit_message=$commit_message" >> $GITHUB_OUTPUT
+          echo "Last commit message: '$commit_message'"
       - name: Check if new commit is major change
         id: check_major_change
         run: |
-          commit_message=${{ github.event.head_commit.message }}
-          major_change_regex="(^FIRST RELEASE:.*$)|(^BREAKING CHANGE:.*$)|(^[^\s]+!:.*$)"
+          commit_message="${{ steps.get_commit_message.outputs.commit_message }}"
+          major_change_regex="(^FIRST RELEASE:.*$)|(^BREAKING CHANGE:.*$)|(^.*[^[:space:]]+!:.*$)"
 
-          if [[ "$commit_message" =~ $breaking_change_regex ]]; then
+          if [[ "$commit_message" =~ $major_change_regex ]]; then
             echo "A major change was identified."
-            echo "is_major_change=true >> $GITHUB_OUTPUT
+            echo "is_major_change=true" >> $GITHUB_OUTPUT
             exit 0
           fi
 
@@ -85,28 +91,9 @@ jobs:
           head_commit: ${{ github.event.pull_request.head.sha }}
           base_commit: ${{ github.event.pull_request.base.sha }}
           last_version: ${{ needs.get_last_version.outputs.last_version }}
-    if: ${{ !needs.check_major_change.outputs.is_major_change }}
-
-  add_release_candidate_version:
-    name: Add release candidate version
-    runs-on: ubuntu_latest
-    outputs:
-      version: ${{ steps.add_rc_suffix.outputs.version }}
-    needs:
-      [
-        get_last_version,
-        generate_breaking_change_version,
-        generate_first_release_candidate_version,
-      ]
-    steps:
-      - name: Add release candidate suffix
-        id: add_rc_suffix
-        run: |
-          version=${{ needs.generate_breaking_change_version.outputs.version }} || ${{ needs.generate_first_release_candidate_version.outputs.version }}
-          new_tag=$version-rc-1
-          echo "version=$new_tag" >> $GITHUB_OUTPUT
-          echo "New generated version: $new_tag."
-    if: ${{ !needs.get_last_version.outputs.is_release_candidate }}
+    if: |
+      always() && !failure() && !cancelled() &&
+      !needs.check_major_change.outputs.is_major_change
 
   increment_release_candidate_version:
     name: Increment release candidate version
@@ -137,6 +124,29 @@ jobs:
           exit 1
     if: ${{ needs.get_last_version.outputs.is_release_candidate == 'true' }}
 
+  add_release_candidate_version:
+    name: Add release candidate version
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.add_rc_suffix.outputs.version }}
+    needs:
+      [
+        get_last_version,
+        generate_breaking_change_version,
+        generate_first_release_candidate_version,
+      ]
+    steps:
+      - name: Add release candidate suffix
+        id: add_rc_suffix
+        run: |
+          version=${{ needs.generate_breaking_change_version.outputs.version || needs.generate_first_release_candidate_version.outputs.version }}
+          new_tag=$version-rc-1
+          echo "version=$new_tag" >> $GITHUB_OUTPUT
+          echo "New generated version: $new_tag."
+    if: |
+      always() && !failure() && !cancelled() &&
+      !needs.get_last_version.outputs.is_release_candidate
+
   create_release:
     name: Create release
     runs-on: ubuntu-latest
@@ -157,8 +167,4 @@ jobs:
           version: ${{ needs.add_release_candidate_version.outputs.version || needs.increment_release_candidate_version.outputs.version }}
           target_commit: ${{ github.event.pull_request.head.sha }}
           pre_release: true
-    if: |
-      always() &&
-      ((needs.add_release_candidate_version.result == 'success' && needs.increment_release_candidate_version.result == 'skipped') ||
-      (needs.add_release_candidate_version.result == 'skipped' && needs.increment_release_candidate_version.result == 'success')
-      )
+    if: always() && !failure() && !cancelled()
