--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -112,7 +112,12 @@ jobs:
           new_tag=$version-rc-1
           echo "version=$new_tag" >> $GITHUB_OUTPUT
           echo "New generated version: $new_tag."
-    if: ${{ !needs.get_last_version.outputs.is_release_candidate }}
+    if: |
+      always() &&
+      ((needs.generate_breaking_change_version.result == 'success' && needs.generate_first_release_candidate_version.result == 'skipped') ||
+      (needs.generate_breaking_change_version.result == 'skipped' && needs.generate_first_release_candidate_version.result == 'success')
+      ) && 
+      ${{ !needs.get_last_version.outputs.is_release_candidate }}
 
   increment_release_candidate_version:
     name: Increment release candidate version
