--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -114,7 +114,7 @@ jobs:
           echo "New generated version: $new_tag."
     if: |
       always() &&
-      needs.get_last_version.result == 'success' &&
+      (needs.get_last_version.result == 'success') &&
       ((needs.generate_breaking_change_version.result == 'success' && needs.generate_first_release_candidate_version.result == 'skipped') ||
       (needs.generate_breaking_change_version.result == 'skipped' && needs.generate_first_release_candidate_version.result == 'success')
       ) && 
@@ -149,7 +149,7 @@ jobs:
           exit 1
     if: |
       always() &&
-      needs.get_last_version.result == 'success' &&
+      (needs.get_last_version.result == 'success') &&
       ${{ needs.get_last_version.outputs.is_release_candidate == 'true' }}
 
   create_release:
