--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -53,7 +53,8 @@ jobs:
 
           echo "No major change was identified."
           exit 0
-    if: ${{ !needs.get_last_version.outputs.is_breaking_change }}
+    if: |
+      always() && !failure() && !cancelled() && ${{ !needs.get_last_version.outputs.is_breaking_change }}
 
   generate_breaking_change_version:
     name: Generate breaking change version
@@ -71,7 +72,8 @@ jobs:
         with:
           commit_message: ${{ github.event.head_commit.message }}
           last_version: ${{ needs.get_last_version.outputs.last_version }}
-    if: ${{ needs.check_major_change.outputs.is_major_change == 'true' }}
+    if: |
+      always() && !failure() && !cancelled() && ${{ needs.check_major_change.outputs.is_major_change == 'true' }}
 
   generate_first_release_candidate_version:
     name: Generate first release candidate version
@@ -91,7 +93,8 @@ jobs:
           head_commit: ${{ github.event.pull_request.head.sha }}
           base_commit: ${{ github.event.pull_request.base.sha }}
           last_version: ${{ needs.get_last_version.outputs.last_version }}
-    if: ${{ !needs.check_major_change.outputs.is_major_change }}
+    if: |
+      always() && !failure() && !cancelled() && ${{ !needs.check_major_change.outputs.is_major_change }}
 
   increment_release_candidate_version:
     name: Increment release candidate version
@@ -120,7 +123,8 @@ jobs:
 
           echo "The version ${{ needs.get_last_version.outputs.last_version }} does not match a valid release candidate version."
           exit 1
-    if: ${{ needs.get_last_version.outputs.is_release_candidate == 'true' }}
+    if: |
+      always() && !failure() && !cancelled() && ${{ needs.get_last_version.outputs.is_release_candidate == 'true' }}
 
   add_release_candidate_version:
     name: Add release candidate version
@@ -141,9 +145,7 @@ jobs:
           new_tag=$version-rc-1
           echo "version=$new_tag" >> $GITHUB_OUTPUT
           echo "New generated version: $new_tag."
-    if: |
-      always() &&
-      ${{ !needs.get_last_version.outputs.is_release_candidate }}
+    if: always() && !failure() && !cancelled()
 
   create_release:
     name: Create release
@@ -165,8 +167,4 @@ jobs:
           version: ${{ needs.add_release_candidate_version.outputs.version || needs.increment_release_candidate_version.outputs.version }}
           target_commit: ${{ github.event.pull_request.head.sha }}
           pre_release: true
-    if: |
-      always() &&
-      ((needs.add_release_candidate_version.result == 'success' && needs.increment_release_candidate_version.result == 'skipped') ||
-      (needs.add_release_candidate_version.result == 'skipped' && needs.increment_release_candidate_version.result == 'success')
-      )
+    if: always() && !failure() && !cancelled()
