--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Get last version
         id: get_last_version
         uses: davidsonbrsilva/versioning-workflow/actions/latest-version-obtaining@hotfix/fixing-major-changes-detection
+    if: always()
 
   check_major_change:
     name: Check major change
@@ -54,7 +55,9 @@ jobs:
           echo "No major change was identified."
           exit 0
     if: |
-      always() && !failure() && !cancelled() && ${{ !needs.get_last_version.outputs.is_breaking_change }}
+      always() &&
+      needs.get_last_version.result == 'success' && 
+      ${{ !needs.get_last_version.outputs.is_breaking_change }}
 
   generate_breaking_change_version:
     name: Generate breaking change version
@@ -73,7 +76,9 @@ jobs:
           commit_message: ${{ github.event.head_commit.message }}
           last_version: ${{ needs.get_last_version.outputs.last_version }}
     if: |
-      always() && !failure() && !cancelled() && ${{ needs.check_major_change.outputs.is_major_change == 'true' }}
+      always() &&
+      (needs.check_major_change.result == 'success' || needs.check_major_change.result == 'skipped')
+      ${{ needs.check_major_change.outputs.is_major_change == 'true' }}
 
   generate_first_release_candidate_version:
     name: Generate first release candidate version
@@ -94,7 +99,10 @@ jobs:
           base_commit: ${{ github.event.pull_request.base.sha }}
           last_version: ${{ needs.get_last_version.outputs.last_version }}
     if: |
-      always() && !failure() && !cancelled() && ${{ !needs.check_major_change.outputs.is_major_change }}
+      always() &&
+      needs.get_last_version.result == 'success' &&
+      (needs.check_major_change.result == 'success' || needs.check_major_change.result == 'skipped')
+      ${{ !needs.check_major_change.outputs.is_major_change }}
 
   increment_release_candidate_version:
     name: Increment release candidate version
@@ -124,7 +132,9 @@ jobs:
           echo "The version ${{ needs.get_last_version.outputs.last_version }} does not match a valid release candidate version."
           exit 1
     if: |
-      always() && !failure() && !cancelled() && ${{ needs.get_last_version.outputs.is_release_candidate == 'true' }}
+      always() &&
+      needs.get_last_version.result == 'success' && 
+      ${{ needs.get_last_version.outputs.is_release_candidate == 'true' }}
 
   add_release_candidate_version:
     name: Add release candidate version
@@ -145,7 +155,12 @@ jobs:
           new_tag=$version-rc-1
           echo "version=$new_tag" >> $GITHUB_OUTPUT
           echo "New generated version: $new_tag."
-    if: always() && !failure() && !cancelled()
+    if: |
+      always() &&
+      needs.get_last_version.result == 'success' &&
+      ((needs.generate_breaking_change_version == 'success' && needs.generate_first_release_candidate_version == 'skipped') ||
+      (needs.generate_breaking_change_version == 'skipped' && needs.generate_first_release_candidate_version == 'success')) &&
+      ${{ !needs.get_last_version.outputs.is_release_candidate }}
 
   create_release:
     name: Create release
@@ -167,4 +182,8 @@ jobs:
           version: ${{ needs.add_release_candidate_version.outputs.version || needs.increment_release_candidate_version.outputs.version }}
           target_commit: ${{ github.event.pull_request.head.sha }}
           pre_release: true
-    if: always() && !failure() && !cancelled()
+    if: |
+      always() &&
+      ((needs.add_release_candidate_version.result == 'success' && needs.increment_release_candidate_version.result == 'skipped') ||
+      (needs.add_release_candidate_version.result == 'skipped' && needs.increment_release_candidate_version.result == 'success')
+      )
