--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -28,6 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       is_major_change: ${{ steps.check_major_change.outputs.is_major_change }}
+      commit_message: ${{ steps.get_commit_message.outputs.commit_message }}
     needs: get_last_version
     steps:
       - name: Get commit message
@@ -69,7 +70,7 @@ jobs:
         id: generate_next_release
         uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@hotfix/fixing-major-changes-detection
         with:
-          commit_message: ${{ github.event.head_commit.message }}
+          commit_message: ${{ needs.check_major_change.outputs.commit_message }}
           last_version: ${{ needs.get_last_version.outputs.last_version }}
     if: ${{ needs.check_major_change.outputs.is_major_change == 'true' }}
 
@@ -93,7 +94,7 @@ jobs:
           last_version: ${{ needs.get_last_version.outputs.last_version }}
     if: |
       always() && !failure() && !cancelled() &&
-      !needs.check_major_change.outputs.is_major_change
+      !needs.check_major_change.outputs.is_major_change && !needs.get_last_version.outputs.is_release_candidate
 
   increment_release_candidate_version:
     name: Increment release candidate version
@@ -132,6 +133,7 @@ jobs:
     needs:
       [
         get_last_version,
+        check_major_change,
         generate_breaking_change_version,
         generate_first_release_candidate_version,
       ]
@@ -145,7 +147,7 @@ jobs:
           echo "New generated version: $new_tag."
     if: |
       always() && !failure() && !cancelled() &&
-      !needs.get_last_version.outputs.is_release_candidate
+      needs.check_major_change.outputs.is_major_change || !needs.get_last_version.outputs.is_release_candidate
 
   create_release:
     name: Create release
