--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -94,7 +94,7 @@ jobs:
           last_version: ${{ needs.get_last_version.outputs.last_version }}
     if: |
       always() && !failure() && !cancelled() &&
-      !needs.check_major_change.outputs.is_major_change
+      !needs.check_major_change.outputs.is_major_change && !needs.get_last_version.outputs.is_release_candidate
 
   increment_release_candidate_version:
     name: Increment release candidate version
